...

import UIKit

class EmployeeListViewController: UIViewController {
    //MARK: - Outlets
    @IBOutlet weak var tableviewOfEmployeeList: UITableView!
    @IBOutlet weak var addButton: UIBarButtonItem!
    
    //MARK: - Parameters
    fileprivate let model = EmployeeViewModel()
    var reloadDelegate = AddNewEmployeeViewController()
    var resultSearchController = UISearchController()
    
...
        super.viewDidLoad()
        navigationController?.setNavigationBarHidden(false, animated: false)
        model.delegate = self
        reloadDelegate.addDelegate = self
        model.getEmployeeList(urlString: EEAppConfig().employee)
        self.showSpinner(onView: self.view)
        tableviewOfEmployeeList.accessibilityIdentifier = "table--tableviewOfEmployeeList"
        addButton.accessibilityIdentifier = "addButton"
        initialiseSearchController()
    }
    func initialiseSearchController() {
        resultSearchController = ({
            let controller = UISearchController(searchResultsController: nil)
...
